# compositor-spice

./: Makefile.am  README  configure.ac
src/: Makefile.am  compositor-rdp.c  main.c  monitor-renderer.c  monitor-renderer.h
src/spice/: Makefile.am  compositor-spice-conf.h  compositor-spice-conf.h.in  compositor-spice.c  compositor-spice.h  weston_basic_event_loop.c  weston_basic_event_loop.h  weston_input_interfaces.c  weston_qxl_commands.c  weston_qxl_commands.h  weston_qxl_interface.c  weston_spice_interfaces.h
